# prd-agent-demo

./: .gitignore  README.md  cleanup_project.bat  main.py  pyproject.toml  requirements.txt
.github/instructions/: python.instructions.md
.github/prompts/: CodeStyle.prompt.md  CreateMVP.prompt.md  ProjectStructure.prompt.md  Testing.prompt.md  Venv.prompt.md
data/: weather_metric_weights.csv
docs/: RWY Methodology.md  changelog.md  rwy-finder-prd.md
rwy_finder/: __init__.py  rwy_main.py  rwy_pipeline.py  rwy_utils.py
tests/: test_rwy_utils.py
